--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,1 +1,12 @@
 @import "tailwindcss";
+
+@layer base {
+    input:-webkit-autofill,
+    input:-webkit-autofill:hover,
+    input:-webkit-autofill:focus,
+    input:-webkit-autofill:active {
+      box-shadow: 0 0 0 1000px white inset !important;
+      -webkit-text-fill-color: black !important;
+      transition: background-color 9999s ease-in-out 0s;
+    }
+  }
